[package]
name = "hexcat-rs"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A small, no-dependency hex dumper."
homepage = "https://codeberg.org/Kaamkiya/hexcat"
repository = "https://codeberg.org/Kaamkiya/hexcat"
readme = "README.md"
keywords = ["hex"]
authors = ["Zia M <ziam3.1415@gmail.com>"]

[[bin]]
name = "hexcat"
path = "src/main.rs"

[dependencies]
